--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "cross-env": "^5.1.4",
     "normalize.css": "7.0.0",
+    "npm": "^5.8.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "spectacle": "^4.0.0",
@@ -26,7 +27,8 @@
     "stryker": "^0.20.1",
     "systemjs": "^0.21.0",
     "ts-node": "^5.0.1",
-    "typescript": "^2.7.2"
+    "typescript": "^2.7.2",
+    "webpack-cli": "^2.0.13"
   },
   "devDependencies": {
     "@types/jasmine": "^2.8.6",
@@ -52,7 +54,7 @@
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-react": "^7.4.0",
     "express": "^4.16.2",
-    "file-loader": "^1.1.5",
+    "file-loader": "^1.1.11",
     "html-loader": "^0.5.1",
     "is-buffer": "^1.1.5",
     "jest": "^22.4.3",
@@ -70,7 +72,7 @@
     "style-loader": "^0.19.0",
     "ts-jest": "^22.4.2",
     "url-loader": "^0.6.2",
-    "webpack": "3.8.1",
+    "webpack": "4.5.0",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-dev-server": "^3.1.1",
     "webpack-hot-middleware": "^2.21.2"
